service-mesh/istio-files/virtual-service-backend-v1-v2-50-50-3s-timeout.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-virtual-service
spec:
  hosts:
  - backend
  http:
  - timeout: 3s
    route:
    - destination:
        host: backend
        subset: v1
      weight: 50  
    - destination:
        host: backend
        subset: v2
      weight: 50
    # retries:
    #   attempts: 2
    #   perTryTimeout: 3s
