service-mesh/istio-files/virtual-service-frontend-fault-inject.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtual-service
spec:
  hosts:
  - '*'
  gateways:
  - frontend-gateway
  http:
  - fault:
      abort:
        # Return HTTP 500 for every request
        httpStatus: 500
        percentage:
          value: 100
    # When header foo = bar
    match:
    - headers:
        foo:
          exact: bar
    route:
    - destination:
        host: frontend
  - route:
    - destination:
        host: frontend
